Fix segment control z-index

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -897,7 +897,7 @@ ol.context {
     }
 
     > li.active {
-      background-color: @blue;
+      background-color: @purple;
       color: #fff;
       list-style-type: inherit;
       border-radius: 0;
